# bluescript

./: .dockerignore  LICENSE  README.md  bs-utils.ts  docker-compose.yml  notebook.Dockerfile  package-lock.json  package.json  server.Dockerfile  tsconfig.base.json  tsconfig.json
back_end/: .gitignore  jest.config.js  package-lock.json  package.json  tslint.json
benchmarks/: .gitignore  README.md  benchmark_data.xlsx
bob/: ast.json  bob.ts
cli/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
cli/src/: index.ts
esp32/: .gitignore  README.md  sdkconfig  sdkconfig.old
front_end/: package-lock.json  package.json
lang/: .gitignore  README.md  package.json
language/: README.md  package-lock.json  package.json  tsconfig.json
m5stack_bluetooth/: .gitignore  CMakeLists.txt  sdkconfig.old
microcontroller/: .gitignore
microcontroller/core/: CMakeLists.txt  linker.lf
microcontroller/core/include/: c-runtime.h  main-thread.h  profiler.h  protocol.h
microcontroller/core/src/: c-runtime.c  main-thread.c  profiler.c  protocol.c
microcontroller/core/test/: c-runtime-test.c  c-runtime-test2.c  float-test.c  profiler-test.c
modules/: base.ts  name_to_id.json
new_translator/: package.json  translate.js  tsconfig.json
notebook/: .gitignore  jest.config.js  package-lock.json  package.json  tsconfig.json
server/: .gitignore  README.md  gpio_103112105111  gpio_103112105111.ld  gpio_103112105111.txt  jest.config.js  package-lock.json  package.json  tsconfig.json  tslint.json
user-program/: bob.ts  led.ts  user-program.ts
(+850 files in other folders)
